# cmd/api/auth/refresh.go
@@ -27,7 +27,6 @@ type RefreshResponse struct {
 //	@Failure		400				{object}	swagger.ValidationErrorResponse
 //	@Failure		401				{object}	swagger.UnauthorizedResponse
 //	@Failure		500				{object}	swagger.InternalServerErrorResponse
-//	@Security		ApiKeyAuth
 //	@Router			/auth/refresh [post]
 func (h *AuthHandler) RefreshToken(w http.ResponseWriter, r *http.Request) {
 	var req RefreshRequest
