# cmd/api/auth/token.go
@@ -28,7 +28,6 @@ type TokenResponse struct {
 //	@Failure		400		{object}	swagger.ValidationErrorResponse
 //	@Failure		401		{object}	swagger.UnauthorizedResponse
 //	@Failure		500		{object}	swagger.InternalServerErrorResponse
-//	@Security		ApiKeyAuth
 //	@Router			/auth/token [post]
 func (h *AuthHandler) IssueTokens(w http.ResponseWriter, r *http.Request) {
 	var req TokenRequest
